i18n/ja/docusaurus-plugin-content-docs/version-18/MSC/analysis.md
---
id: analysis
title: ログ解析ページ
sidebar_label: ログ解析ページ
---

ログ解析ページを使用して、カレントログファイルに記録された内容を見ることができます。 この機能はデータベース利用状況の解析、エラーや不具合の原因となった処理を探すなどの場合に役立ちます。 クライアント/サーバーモードの場合、各クライアントマシンごとの操作を検証することもできます。
> データベースのデータに対しておこなわれた操作をロールバックさせることもできます。 詳細は [ロールバック](rollback.md) ページを参照してください。

![](/assets/en/MSC/MSC_analysis.png)

ログファイルに記録された操作は行として表示されます。 各操作の様々な情報が列に表示されます。 ヘッダーをドラッグすることによって列の並び順を変えることもできます。

この情報を使用して各操作のソースとコンテキストを識別できます:

- **操作**: ログファイル中での一連の操作番号
- **アクション**: データに対しておこなわれた操作のタイプ。 この列には以下の操作のいずれかが記録されます:
  - データファイルを開く: データファイルを開いた
  - データファイルを閉じる: 開いたデータファイルを閉じた
  - コンテキストの作成する: 実行コンテキストを指定するプロセスを作成した
  - コンテキストを閉じる: プロセスを閉じた
  - 追加: レコードを作成、格納した
  - BLOB を追加: BLOBフィールドに BLOB を格納した
  - 削除: レコードを削除した
  - 更新: レコードを更新した
  - トランザクションの開始: トランザクションを開始した
  - トランザクションの受け入れ: トランザクションを受け入れた
  - トランザクションのキャンセル: トランザクションをキャンセルした

- **テーブル**: 追加/削除/更新されたレコードまたは BLOB の所属テーブル
- **プライマリーキー/BLOB**: 各レコードのプライマリーキーのコンテンツ (プライマリーキーが複数のフィールドから構成されているときには、値はセミコロンで区切られています)、またはオペレーションに関連した BLOB のシーケンス番号
- **プロセス**: 処理が実行された内部プロセス番号。 この内部番号は処理のコンテキストに対応します。
- **サイズ**: 操作により処理されたデータのサイズ (バイト単位)
- **日付と時刻**: 処理が実行された日付と時刻
- **ユーザー**: 処理を実行したユーザー名。 クライアント/サーバーモードではクライアントマシン名が表示されます。 シングルユーザーモードではユーザーの ID が表示されます。 4Dパスワードが有効にされていない場合、この列にはなにも記録されません。
- **値**: レコードの追加や更新の場合、フィールドの値。 値はセミコロン “;” で区切られます。 文字形式に表現できる値のみを表示します。  
  ***注**: データベースが暗号化されており、開かれたログファイルに対応する有効なデータキーが提供されていない場合、暗号化された値はこのカラムには表示されません。*
- **レコード**: レコード番号

選択したデータベースのカレントログファイル (デフォルトで "データファイル名.journal" というファイル名) の内容を更新するには **解析** をクリックします。 **ブラウズ** ボタンをクリックすると、データベースの他のログファイルを選択できます。 **書き出し...** ボタンを使用してファイルの内容をテキストとして書き出せます。
